Bug 241874 - Can't edit & save an existing equalizer preset
Summary: Can't edit & save an existing equalizer preset
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Tools/Equalizer (other bugs)
Version First Reported In: 2.6-git
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-06-16 03:04 UTC by Harley Laue
Modified: 2013-01-22 19:04 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.8
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Harley Laue 2010-06-16 03:04:07 UTC
Version:           2.3.1 (using KDE 4.4.3) 
OS:                Linux

Presets can be created but they cannot be overwritten when edited.

Reproducible: Always

Steps to Reproduce:
1) Edit an existing preset
2) Upon any changes Amarok automatically renames the preset to "Manual"
3) Try to save the edited preset with a name of an existing preset 

Actual Results:  
Upon typing an existing preset's name and clicking save, the original preset's values are reloaded losing any changes that may have been made.

Expected Results:  
The preset of the same name is overwritten perhaps with a prompt "You're about to overwrite an existing preset, are you sure you want to do this?"

The current method to overwrite a preset is as follows:
1) Save preset to a temporary name
2) Delete the old preset
3) Save temporary preset to old preset's name
4) Remove temporary preset

It's not straight forward that this is the route that has to be taken in order to save the preset to an existing preset's name.

Other thoughts:
The actual implementation on overwriting the preset is up to your discretion. I was merely giving one possible solution in the "expected results" section. Another possibility would be like what bug 225406 said: Have a popup for a name (perhaps with type-ahead like the current drop-down has.) Another option might  be to not change the name of the preset to "Manual" after an edit and when the use clicks save prompt then, or if the user doesn't save, rename it upon clicking "OK".
Comment 1 Harley Laue 2010-06-16 03:07:24 UTC
I should have added equalizer to the title so it's more likely to be found if others search for reports on equalizer presets.
Comment 2 Ognyan Angelov 2010-12-02 18:36:00 UTC
Setup:
  Amarok 2.3.2
  KDE 4.4.5
Test Result:
  Same Bug occurs here.
Comment 3 Myriam Schweingruber 2010-12-02 19:27:30 UTC
Setting to confirmed, updated version.
Comment 4 Myriam Schweingruber 2011-06-04 12:10:24 UTC
This is an automated message from the triager:

Amarok 2.4.1 has been released on May 8 already. Could you please upgrade and test if you can still reproduce this bug?

Without feedback within a month we will close this bug as resolved.

Thank you for your understanding.
Comment 5 Harley Laue 2011-06-06 16:44:45 UTC
It is indeed reproducible with 2.4.1. I can't seem to update the version myself though.
Comment 6 Myriam Schweingruber 2011-06-07 01:41:32 UTC
Thank you for the feedback.
Comment 7 Kevin Funk 2011-06-14 15:05:35 UTC
Just investigated, not really fixable at the moment. As soon as the combo box is left, a indexChanged signal is emitted which causes a reload of the current item (intended, actually). 

The Equalizer would have to be redesigned, e.g. use a modal line edit for entering the to-be-saved preset name.

Just FYI.
Comment 8 Valdas 2012-05-20 18:15:21 UTC
This Bug also exists in version 2.5.0.
Comment 9 Illya Kovalevskyy 2012-12-17 22:18:13 UTC
That error on:
======
Kubuntu 12.10
Qt 4.8.3
Amarok 4.7 (beta)
======

Cannot edit or save an existing equalizer preset.
Comment 10 Ralf Engels 2013-01-17 10:46:06 UTC
I agree that I don't understand this preset stuff.
Why does the preset always fall back to "manual"?

Will have a look at the code.
Comment 11 Ralf Engels 2013-01-22 19:04:14 UTC
Git commit 97c5144faf608b8fca0522cff4f9590fe09896bf by Ralf Engels.
Committed on 22/01/2013 at 14:40.
Pushed by rengels into branch 'master'.

Refactoring for Equalizer dialog

Add comments
Improve saving of pre-defined presets
Fix Can't edit & save an existing equalizer preset
Cleanup of the Equalizer stuff a bit, expecially the Equalizer Dialog
Related: bug 274972
FIXED-IN: 2.8

M  +0    -1    src/App.cpp
M  +168  -181  src/dialogs/EqualizerDialog.cpp
M  +38   -19   src/dialogs/EqualizerDialog.h
M  +17   -47   src/dialogs/EqualizerDialog.ui
M  +32   -27   src/equalizer/EqualizerPresets.cpp
M  +29   -12   src/equalizer/EqualizerPresets.h

http://commits.kde.org/amarok/97c5144faf608b8fca0522cff4f9590fe09896bf