Refactoring for Equalizer dialog

Add comments
Improve saving of pre-defined presets
Fix Can't edit & save an existing equalizer preset
Cleanup of the Equalizer stuff a bit, expecially the Equalizer Dialog

BUG: 241874
BUG: 274972
FIXED-IN: 2.8